# FreeImage

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
Examples/: CMakeLists.txt
Examples/Generic/: CMakeLists.txt
Source/: CMakeLists.txt
Source/FreeImage/: PluginPNG.cpp  ZLibInterface.cpp
Source/LibJPEG/: CMakeLists.txt
Source/LibJXR/: CMakeLists.txt
Source/LibJXR/image/decode/: segdec.c
Source/LibJXR/jxrgluelib/: JXRGlueJxr.c
Source/LibOpenJPEG/: CMakeLists.txt
Source/LibPNG/: CMakeLists.txt
Source/LibRawLite/: CMakeLists.txt
Source/LibTIFF4/: CMakeLists.txt
Source/LibWebP/: CMakeLists.txt
Source/OpenEXR/: CMakeLists.txt
Source/OpenEXR/IlmImf/: ImfAttribute.cpp
Source/ZLib/: gzwrite.c
Source/ZLibFreeImage/: CMakeLists.txt  gzlib.c  gzread.c  gzwrite.c
